# loupe

./: README.md  main.py  pyproject.toml
datasets/: __init__.py  dataset.csv
examples/: example1.py  example2.py
examples/privateeye.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
loupe/: BaseInspector.py  TextInspector.py  __init__.py  check_digits.py  patterns.jsonl  pii_utils.py  text_extraction.py  text_processing.py  utils.py
tests/: test_privateeye.py
