[tool.poetry]
name = "loupe"
version = "0.1.0"
description = ""
authors = ["alex2718 <a.lee84@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^3.4.2"
pandas = "^1.5.1"
numpy = "^1.23.4"
fastapi = "^0.85.1"
black = "^22.10.0"
thinc = "^8.1.5"
pdfplumber = "^0.7.5"
python-docx = "^0.8.11"
uvicorn = "^0.19.0"
importlib-metadata = "^5.0.0"
regex = "^2022.9.13"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"